udpated for vercel

--- a/vercel-bak.json
+++ b/vercel-bak.json
@@ -11,5 +11,7 @@
       "src": "/api/(.*)",
       "dest": "/api/index.ts"
     }
-  ]
+  ],
+
+  "rewrites": [{ "source": "/api/(.*)", "destination": "/api" }]
 }
