--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "shopping-server",
   "version": "1.0.0",
   "description": "",
-  "main": "./api/index.js",
+  "main": "./api/index.ts",
   "scripts": {
-    "start": "nodemon ./api/index.js",
+    "start": "nodemon ./api/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
